--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,53 @@ body {
     overflow-x: hidden;
     background-color: whitesmoke;
 }
+html {
+  scroll-behavior: smooth;
+}
+/* Aqui começa a header */
+/* Aqui começa a config da logo */
+#logo{
+    height: 150px;
+    margin: 0;
+    width: auto;
+    z-index: 2;
+}
+/* Aqui termina a config da logo */
+/* Aqui começa  a config da nav*/
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between; /* Espaço entre logo e links */
+    align-items: center;
+    padding: 10px 40px;
+}
+
+/* Atualize os links para ficarem alinhados */
+#links {
+    font-family: "Abril Fatface", serif;    
+    display: flex;
+    gap: 80px; /* Reduzi o gap para caber melhor */
+    margin-right: 3%;
+    z-index: 2;
+    margin-top: -1%;
+}
+
+#links a {
+    color: #f5f5f5;
+    font-size: 2rem; /* Reduzi um pouco o tamanho */
+    transition: transform 0.3s ease;
+    text-decoration: none;
+}
+#links a:hover {
+    transform: scale(1.2);
+    color: #00d4ff;
+}
+/* Aqui termina a config da nav */
+/* Aqui termina a header */
 /* Aqui começa a config da main */
 .container {
     position: relative;
@@ -25,7 +72,7 @@ body {
     overflow: hidden;
 }        
 video {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,12 +83,12 @@ video {
     z-index: -1;
 }
 .overlay{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.85), rgba(0,0,0,0.4));
+    background: linear-gradient(to top, rgba(0,0,0,0.85), rgba(0,0,0,0.2));
     z-index: 0;
 }
 /* Aqui começa a config do text em cima do vídeo da main */
@@ -53,9 +100,9 @@ video {
     top: 50%;
     left: 30%; /* centralizado */
     transform: translate(-50%, -50%);
-    color: #fff;
+    color: #f5f5f5;
     text-align: center;
-    font-size: 3rem;
+    font-size: 5rem;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
     z-index: 1;
     width: 90%;
@@ -81,10 +128,11 @@ video {
 /* Aqui termina a config do text em cima do vídeo da main */
 /* Aqui começa a config do botão */
 .btn-main {
+    position: absolute;
     margin-top: 20%;
-    margin-right: 40%;
+    margin-left: -40%;
     padding: 12px 28px;
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-family: "Hammersmith One", sans-serif;
     color: #f5f5f5;
     background: #1a1a1a;
@@ -92,7 +140,8 @@ video {
     border-radius: 30px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    z-index: 1;
+    z-index: 2;
+    white-space: nowrap;
 }
 .btn-main:hover {
     background: #00d4ff;
@@ -102,23 +151,55 @@ video {
 }
 /* Aqui termina a config do botão */
 /* Aqui termina a config do vídeo da main */
-.icons {
-    font-family: "Abril Fatface", serif;    
+/* Aqui começa a config dos cards */
+#title-cards{
     position: absolute;
-    bottom: 50px;
-    margin-left: 90%;
-    transform: translateX(-50%);
-    gap: 90px;
-    z-index: 1;
+    font-family: "Abril Fatface", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4rem;
+    text-align: center;
+    z-index: 2;
+    color: #f5f5f5;
+    margin-top: 3%;
+}
+#cards{
+    margin-top: 22%;
     display: flex;
     justify-content: space-around;
+    align-items: stretch;
+    flex-wrap: wrap;
+    padding: 2rem;
 }
-.icons i {
+.card{
+    flex: 1;
+    min-width: 300px;
+    max-width: 570px;
+    height: 450px;
+    border-radius: 20px;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1.5rem;
+    position: relative;
+    margin-top: 3%;
+    background-color: #1a1a1a;
+    opacity: 0.7;
+    margin-top: 20%;
+}
+.card h3{
+    font-family: "Hammersmith One", sans-serif;
+    font-size: 3rem;
+    margin-bottom: 1rem;
     color: #f5f5f5;
-    font-size: 2rem;
-    transition: transform 0.3s ease;
+    text-align: center;
+    z-index: 2;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8)
 }
-.icons i:hover {
-    transform: scale(1.2);
-    color: #00d4ff;
+.card p{
+    font-family: "Hammersmith One", sans-serif;
+    font-size: 1.5rem;
+    color: #f5f5f5;
 }
+/* Aqui termina a config dos cards */
