--- a/CSS/style.css
+++ b/CSS/style.css
@@ -204,4 +204,19 @@ video {
 }
 /* Aqui termina a config dos cards */
 /* Aqui começa o footer */
+footer {
+    background-color: transparent; 
+    color: #f5f5f5;
+    text-align: center;
+    margin-top: 40%;
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+#black{
+    background-color: black;
+    width: 100%;
+    height: 35%;
+}
 /* Aqui termina o footer */
